--- a/res/layout/loading.xml
+++ b/res/layout/loading.xml
@@ -1,29 +1,29 @@
-<LinearLayout 
-    android:layout_width="fill_parent" 
-    android:layout_height="fill_parent" 
+<LinearLayout
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:gravity="center"
     android:background="#FFF"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    
+
     <ImageView
-        android:layout_width="wrap_content" 
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/logo"
         android:layout_marginBottom="35dip"
     />
-    
+
     <TextView
-        android:layout_width="wrap_content" 
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/loading__tagline"
         android:textColor="#222222"
         android:textStyle="bold"
         android:layout_marginBottom="5dip"
     />
-    
+
     <TextView
-        android:layout_width="wrap_content" 
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/loading__date_and_location"
         android:textColor="#08B9A6"
@@ -36,12 +36,12 @@
         android:textColor="#000"
         android:layout_marginTop="40dip"
     />
-    
-    <TextView
-        android:layout_width="wrap_content" 
+
+    <TextView android:id="@+id/version_text"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="140dip"
         android:text="@string/version"
         android:textStyle="normal"
-    />    
+    />
 </LinearLayout>
